--- a/views/index.ejs
+++ b/views/index.ejs
@@ -440,26 +440,17 @@
     </section><!-- End Blog Section -->
 
     <!-- ======= Contact Section ======= -->
-    <!-- <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(/img/overlay-bg.jpg)">
+    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(/img/overlay-bg.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
-            <div class="contact-mf">
-              <div id="contact" class="box-shadow-full">
-                <div class="row">
-                
-                  
-                
-
-                </div>
-              </div>
-              
-            </div>
+            
           </div>
         </div>
       </div>
-    </section>End Contact Section -->
+    </section>
+    <!-- End Contact Section -->
 
   </main><!-- End #main -->
 
