--- a/views/index.ejs
+++ b/views/index.ejs
@@ -462,9 +462,10 @@
           <div class="copyright-box">
 
             <div class="col-lg-6 col-md-12 mb-4 mb-md-0"></div>
-             <h5 class="text-white">هاتف :  0550022856</h5>
-               <h5 class="text-white">ايميل :  mohazea12@gmail.com</h5>
-              
+             <h5 > <a class="text-white " href="tel:0550022856"> <i class="bi bi-telephone-outbound-fill"></i>&nbsp; &nbsp; &nbsp; هاتف : 0550022856</a> </h5>
+             <h5 class="text-white " ><i class="bi bi-envelope-fill"></i>&nbsp; &nbsp; &nbsp; ايميل :  mohazea12@gmail.com </h5>
+             
+             
     
             </div>
             <div class="credits">
