--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,6 +50,7 @@
           
           
           <li><a class="nav-link scrollto" href="#contact">الاتصال</a></li>
+          
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -67,6 +68,8 @@
           <h1 class="hero-title mb-4">المفتاح الالكتروني المتنقل</h1>
           <p class="hero-subtitle"><span class="typed" data-typed-items="خدمة24 ساعة, اصلاح جميع انواع السويتشات, استخراج وتوليف المفاتيح  بدل فاقد
             , تصليح أقفال السيارات ,برمجة المفاتيح    "></span></p>
+            <br>
+            <h5 > <a class="text-white " href="tel:0550022856"> 0550022856 &nbsp;<i class="bi bi-telephone-outbound-fill"></i>    </a> </h5>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
